IDEA-239901 run on module path in case of module-info.java, similar to running via junit